--- a/project1/style.css
+++ b/project1/style.css
@@ -32,7 +32,7 @@ h1{
 	grid-column-end: 11;
 	grid-row-start: 6;
 	grid-row-end: 7;
-	padding-top: 5%;
+	padding: 20px;
 	justify-self: center;
 }
 
